--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ nav {
     padding: 1rem 0;
 }
 
-.heading h1 {
+#navbar .heading h1 {
     font-size: 2.5rem;
     cursor: pointer;
     margin-left: 200px;
@@ -146,6 +146,47 @@ nav {
     }
 }
 
+/* Scrool Down Button */
+
+.scroll-up-btn {
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: crimson;
+    right: 30px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    border-bottom-width: 2px;
+    display: none;
+    cursor: pointer;
+    /* bottom: 10px;
+    opacity: 0;
+    pointer-events: none; */
+    transition: all 0.3s ease;
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+/* .scroll-up-btn.show{
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
+} */
+
+.scroll-up-btn a {
+    color: #fff;
+}
+
+
+.scroll-up-btn:hover {
+    filter: brightness(90%);
+}
+
 /* Home-section */
 
 /* section {
@@ -158,6 +199,10 @@ nav {
     background-size: contain;
     position: relative;
     background: linear-gradient(to right, #025d80 0%, black 100%);
+}
+
+.home .container{
+    margin: auto;
 }
 
 .main-message {
@@ -173,6 +218,17 @@ nav {
     letter-spacing: 1.2rem;
     font-size: 2rem;
     margin: auto;
+}
+
+.main-message .text {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-top: 5px;
+    margin: auto;
+}
+
+.main-message .text span {
+    color: crimson;
 }
 
 .main-message h3 {
@@ -226,12 +282,12 @@ section {
     padding: 100px 0;
 }
 
-section .container{
+section .container {
     padding: 10px 40px;
 }
 
 .about .about-content,
-.services .service-content,
+.service .service-content,
 .skills .skill-content,
 .contact .contact-content {
     display: flex;
@@ -243,7 +299,7 @@ section .container{
 section .heading {
     position: relative;
     text-align: center;
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 500;
     margin-bottom: 2rem;
     padding-bottom: 2rem;
@@ -255,7 +311,7 @@ section .heading::before {
     position: absolute;
     bottom: 10px;
     left: 50%;
-    width: 180px;
+    width: 11.5rem;
     height: 3px;
     background: #fff;
     transform: translateX(-50%);
@@ -266,7 +322,7 @@ section .heading::after {
     position: absolute;
     bottom: 0px;
     left: 50%;
-    font-size: 20px;
+    font-size: 1.2rem;
     color: crimson;
     padding: 0 5px;
     background: #fff;
@@ -292,7 +348,7 @@ section .heading::after {
 
 .about .about-img img {
     width: 25rem;
-    height: 32rem;
+    /* height: 30rem; */
     object-fit: cover;
     border-radius: 10px;
 }
@@ -352,7 +408,7 @@ hr {
 }
 
 .sevice .heading::before {
-    width: 216px;
+    width: 13.5rem;
 }
 
 .sevice .heading::after {
@@ -375,6 +431,7 @@ hr {
     height: 40vh;
     /* max-width: 20vw; */
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
     align-items: center;
@@ -429,7 +486,7 @@ hr {
 }
 
 .sevice .sevice-section .card .box p {
-    font-size: 1.05rem;
+    /* font-size: 1.05rem; */
     margin: 10px 0px;
 }
 
@@ -441,7 +498,7 @@ hr {
 }
 
 .skill .heading::before {
-    width: 150px;
+    width: 9.8rem;
 }
 
 .skill .heading::after {
@@ -468,7 +525,7 @@ hr {
 
 
 .skill .skill-content .skill-section-left .text {
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: 600;
     margin-bottom: 10px;
 }
@@ -481,7 +538,7 @@ hr {
     display: inline-block;
     background: crimson;
     color: #fff;
-    font-size: 18px;
+    font-size: 1.1rem;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
@@ -560,7 +617,8 @@ hr {
 
 .contact .contact-content .contact-section-left {
     width: 40%;
-    padding: 10px 10px;
+    /* padding: 0px 10px; */
+
 }
 
 .contact .contact-content .contact-section-right {
@@ -577,14 +635,14 @@ hr {
 }
 
 .contact .contact-content .text {
-    font-size: 20px;
+    font-size: 1.2rem;
     font-weight: 600;
     margin-bottom: 10px;
 }
 
-.contact .contact-content .contact-section-left p {
+/* .contact .contact-content .contact-section-left p {
     text-align: justify;
-}
+} */
 
 .contact .contact-content .contact-section-left .icons {
     margin: 10px 0;
@@ -601,7 +659,7 @@ hr {
 }
 
 .contact .contact-content .row i {
-    font-size: 25px;
+    font-size: 1.5rem;
     color: crimson;
 }
 
@@ -641,7 +699,7 @@ hr {
     border-radius: 6px;
     outline: none;
     padding: 0 15px;
-    font-size: 17px;
+    font-size: 1rem;
     font-family: 'Poppins', sans-serif;
     transition: all 0.3s ease;
 }
@@ -664,10 +722,10 @@ hr {
 .contact-section-right form .button-area button {
     color: #fff;
     display: block;
-    width: 160px !important;
-    height: 45px;
+    width: 10rem;
+    height: 3.5rem;
     outline: none;
-    font-size: 18px;
+    font-size: 1.1rem;
     font-weight: 500;
     border-radius: 6px;
     cursor: pointer;
@@ -696,7 +754,7 @@ hr {
 }
 
 .contact .contact-section-icon .contact-icons i {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     color: #fff;
 }
 
@@ -721,4 +779,3 @@ footer span a {
 footer span a:hover {
     text-decoration: underline;
 }
-
