--- a/index.css
+++ b/index.css
@@ -7,7 +7,787 @@
 }
 
 html {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Share+Tech+Mono&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: inherit;
+}
+
+html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    box-sizing: border-box;
+    background-color: black;
+    scroll-behavior: smooth;
+    color: white;
+}
+
+/* Navbar */
+
+a {
+    text-decoration: none;
+    color: #025d80;
+}
+
+a:hover {
+    color: #f9f9f9;
+}
+
+ul li {
+    list-style: none;
+}
+
+img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+header {
+    width: 100%;
+    height: 5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.container {
+    max-width: 90rem;
+    width: 100%;
+    margin: 0 auto;
+
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 0;
+}
+
+#navbar .heading h1 {
+    font-size: 2.5rem;
+    cursor: pointer;
+    margin-left: 200px;
+    z-index: 10;
+    position: absolute;
+    left: 0rem;
+    top: 0;
+    padding: 1.2rem;
+    background: linear-gradient(to right,
+            rgba(249, 105, 14, 1) 0%,
+            rgba(102, 51, 153, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.menu-icon {
+    cursor: pointer;
+    z-index: 10;
+    position: fixed;
+    right: 0rem;
+    top: 0;
+    padding: 1.2rem;
+    color: white;
+    background-color: black;
+    border-radius: 0% 0% 0% 40%;
+}
+
+.profile-pic {
+    height: 9rem;
+    width: auto;
+    display: block;
+    margin: 1.5rem 0;
+}
+
+.caption {
+    display: block;
+}
+
+.nav-list {
+    width: 24rem;
+    height: 100vh;
+    background-color: rgb(54, 52, 52);
+    position: fixed;
+    top: 0;
+    right: -26rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+    transition: all 650ms ease-in-out;
+}
+
+.nav-items {
+    margin: 1.2rem 0;
+}
+
+.nav-link {
+    opacity: 0;
+    font-size: 1.5rem;
+    color: #cecece;
+    letter-spacing: 1.5px;
+    font-weight: 500;
+}
+
+.nav-link:hover {
+    color: red
+}
+
+.nav-list.active {
+    right: 0;
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translate(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0px);
+    }
+}
+
+/* Scrool Down Button */
+
+.scroll-up-btn {
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: crimson;
+    right: 30px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 6px;
+    border-bottom-width: 2px;
+    display: none;
+    cursor: pointer;
+    /* bottom: 10px;
+    opacity: 0;
+    pointer-events: none; */
+    transition: all 0.3s ease;
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+/* .scroll-up-btn.show{
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
+} */
+
+.scroll-up-btn a {
+    color: #fff;
+}
+
+
+.scroll-up-btn:hover {
+    filter: brightness(90%);
+}
+
+/* Home-section */
+
+/* section {
+    padding: 5rem 0;
+} */
+
+.home {
+    width: 100%;
+    height: 100vh;
+    background-size: contain;
+    position: relative;
+    background: linear-gradient(to right, #025d80 0%, black 100%);
+}
+
+.home .container{
+    margin: auto;
+}
+
+.main-message {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.main-message h1 {
+    letter-spacing: 1.2rem;
+    font-size: 2rem;
+    margin: auto;
+}
+
+.main-message .text {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-top: 5px;
+    margin: auto;
+}
+
+.main-message .text span {
+    color: crimson;
+}
+
+.main-message h3 {
+    font-size: 4rem;
+    margin: 1rem 0;
+    background: linear-gradient(to right,
+            rgba(249, 105, 14, 1) 0%,
+            rgba(102, 51, 153, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.main-message p {
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.into-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.btn {
+    background: #025d80;
+    border-radius: 2rem;
+    columns: #fafafa;
+    margin-top: 2rem;
+    padding: 1rem 2.5rem;
+    color: white;
+    transition: background-color 650ms;
+}
+
+.btn:hover {
+    color: #fafafa;
+    background: black;
+}
+
+.scroll-down i {
+    margin-top: 2rem;
+    font-size: 3.5rem;
+}
+
+.scroll-down i:hover {
+    color: black;
+}
+
+
+/* Common section Heading*/
+
+section {
+    padding: 100px 0;
+}
+
+section .container {
+    padding: 10px 40px;
+}
+
+.about .about-content,
+.service .service-content,
+.skills .skill-content,
+.contact .contact-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section .heading {
+    position: relative;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    padding-bottom: 2rem;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+section .heading::before {
+    content: "";
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    width: 11.5rem;
+    height: 3px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
+section .heading::after {
+    content: "who i am";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    font-size: 1.2rem;
+    color: crimson;
+    padding: 0 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
+/* About-section */
+
+.about {
+    padding: 20px;
+    /* background-color: white; */
+}
+
+
+.about .heading::after {
+    content: "who i am";
+    background: black;
+}
+
+.about .about-section-left {
+    width: 45%;
+}
+
+.about .about-img img {
+    width: 25rem;
+    /* height: 30rem; */
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.about .about-section-right {
+    width: 55%;
+}
+
+.about .about-section-right .text {
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.about .about-section-right .text span {
+    color: crimson;
+}
+
+.about .about-section-right p {
+    text-align: justify;
+    font-size: 1.2rem;
+}
+
+.about .about-section-right a {
+    display: inline-block;
+    background-color: crimson;
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: 2px solid crimson;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+}
+
+.about .about-section-right a:hover {
+    color: crimson;
+    background: none;
+}
+
+hr {
+    max-width: 84vw;
+    border: none;
+    height: 1px;
+    margin: 10px auto;
+    background: linear-gradient(to right,
+            rgba(249, 105, 14, 1) 0%,
+            rgba(102, 51, 153, 1) 100%);
+}
+
+/* Services-section */
+
+
+.sevice {
+    padding: 10px;
+    /* height: 80vh; */
+}
+
+.sevice .heading::before {
+    width: 13.5rem;
+}
+
+.sevice .heading::after {
+    content: "what i Provide";
+    background: black;
+}
+
+.sevice .sevice-section {
+    display: flex;
+    /* max-width: 80%;
+    margin: auto; */
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+}
+
+.sevice .sevice-section .card {
+    width: 25vw;
+    height: 40vh;
+    /* max-width: 20vw; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    margin: 20px 10px;
+    cursor: pointer;
+    border: 2px solid #222;
+    background-color: #222;
+    border-radius: 8px;
+    transition: all 0.3 ease;
+}
+
+.sevice .sevice-section .card:hover {
+    color: white;
+    border: 2px solid black;
+    background: crimson;
+    /* transform: scale(1.1); */
+}
+
+.sevice .sevice-section .card .box i {
+    font-size: 3rem;
+    color: crimson;
+    margin: 10px 0px;
+    transition: all 0.3 ease;
+}
+
+.sevice .sevice-section .card:hover i {
+    color: white;
+}
+
+
+.sevice .sevice-section .card .box {
+    transition: all 0.3 ease;
+}
+
+.sevice .sevice-section .card:hover .box {
+    transform: scale(1.05);
+}
+
+
+.sevice .sevice-section .card .text {
+    font-size: 1.8rem;
+    font-weight: 500;
+    margin: 10px;
+    background: linear-gradient(to right,
+            rgba(249, 105, 14, 1) 0%,
+            rgba(102, 51, 153, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 0.3 ease;
+}
+
+.sevice .sevice-section .card .box p {
+    /* font-size: 1.05rem; */
+    margin: 10px 0px;
+}
+
+/* Skills-section */
+
+.skill {
+    padding: 10px;
+    /* height: 75vh; */
+}
+
+.skill .heading::before {
+    width: 9.8rem;
+}
+
+.skill .heading::after {
+    content: "what i Know";
+    background: black;
+}
+
+.skill .skill-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill .skill-content .skill-section-left {
+    width: 40vw;
+    /* text-align: center; */
+    padding: 10px 40px;
+    margin: 10px;
+}
+
+.skill .skill-content .skill-section-right {
+    width: 40vw;
+}
+
+
+.skill .skill-content .skill-section-left .text {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skill .skill-content .skill-section-left p {
+    text-align: justify;
+}
+
+.skill .skill-content .skill-section-left a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 1.1rem;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.skill .skill-content .skill-section-left a:hover {
+    color: crimson;
+    background: none;
+}
+
+.skill .skill-content .skill-section-right .bars {
+    margin-bottom: 15px;
+}
+
+.skill .skill-content .skill-section-right .info {
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skill .skill-content .skill-section-right span {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.skill .skill-content .skill-section-right .line {
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+
+.skill .skill-content .skill-section-right .line::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+
+.skill-content .skill-section-right .html::before {
+    width: 90%;
+}
+
+.skill-content .skill-section-right .css::before {
+    width: 60%;
+}
+
+.skill-content .skill-section-right .js::before {
+    width: 80%;
+}
+
+.skill-content .skill-section-right .php::before {
+    width: 50%;
+}
+
+.skill-content .skill-section-right .mysql::before {
+    width: 70%;
+}
+
+/* Contact Section */
+
+
+.contact .contact-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.contact .contact-content .contact-section-left {
+    width: 40%;
+    /* padding: 0px 10px; */
+
+}
+
+.contact .contact-content .contact-section-right {
+    width: 40%;
+}
+
+.contact .heading::after {
+    content: "get in touch";
+    background: black;
+}
+
+.contact .contact-content .column {
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .text {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+/* .contact .contact-content .contact-section-left p {
+    text-align: justify;
+} */
+
+.contact .contact-content .contact-section-left .icons {
+    margin: 10px 0;
+}
+
+.contact .contact-content .row {
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info {
+    margin-left: 30px;
+}
+
+.contact .contact-content .row i {
+    font-size: 1.5rem;
+    color: crimson;
+}
+
+.contact .contact-content .info .head {
+    font-weight: 500;
+}
+
+.contact .contact-content .info .sub-title {
+    color: #fff;
+}
+
+.contact .contact-section-right form .fields {
+    display: flex;
+}
+
+.contact .contact-section-right form .field,
+.contact .contact-section-right form .fields .field {
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.contact .contact-section-right form .textarea {
+    height: 80px;
+    width: 100%;
+}
+
+.contact .contact-section-right form .name {
+    margin-right: 10px;
+}
+
+.contact .contact-section-right form .field input,
+.contact .contact-section-right form .textarea textarea {
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.contact .contact-section-right form .field input:focus,
+.contact .contact-section-right form .textarea textarea:focus {
+    border-color: #b3b3b3;
+}
+
+.contact .contact-section-right form .textarea textarea {
+    padding-top: 10px;
+    resize: none;
+}
+
+.contact .contact-section-right form .button-area {
+    display: flex;
+    align-items: center;
+}
+
+.contact-section-right form .button-area button {
+    color: #fff;
+    display: block;
+    width: 10rem;
+    height: 3.5rem;
+    outline: none;
+    font-size: 1.1rem;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    flex-wrap: nowrap;
+    background: crimson;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.contact-section-right form .button-area button:hover {
+    color: crimson;
+    background: none;
+}
+
+
+.contact .contact-section-icon {
+    display: flex;
+    /* justify-content: flex-start; */
+    align-items: center;
+    /* padding: 10px; */
+    margin: 10px auto;
+}
+
+.contact .contact-section-icon .contact-icons a {
+    padding: 10px 15px;
+}
+
+.contact .contact-section-icon .contact-icons i {
+    font-size: 1.2rem;
+    color: #fff;
+}
+
+.contact .contact-section-icon .contact-icons a i:hover {
+    color: crimson;
+}
+
+/* footer */
+
+footer {
+    background: #111;
+    padding: 15px 23px;
+    color: #fff;
+    text-align: center;
+}
+
+footer span a {
+    color: crimson;
+    text-decoration: none;
+}
+
+footer span a:hover {
+    text-decoration: underline;
+}
     font-size: 16px;
     box-sizing: border-box;
     background-color: black;
